# information_efficiency_metrics

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  example_usage.py  info_efficiency.py  requirements.txt  setup.py  setup_project.sh
demo/: Full_demo.md  diagnostic.py  diagnostic_fixed.py  full_demo.py
docs/: Cuda_func_type_data_flow.md  Microstructure_Arch.md  Multi_GPU_VR_impl.md  SIMD.md  Shuffle_down_sync.md  blockReduce.md  computeHPeriodReturns.md  computeVR.md  index.html  multi_GPU_config.md  verticaUDxTriggerToMS.html
python/: api.py  info_efficiency.py  test_library.py
src/bindings/: CMakeCache.txt  python_bindings.cpp  python_bindings_simple.cpp  python_module.c
src/core/: polygon_reader.cpp  polygon_reader.h
src/cuda/: kernels.cuh  variance_ratio.cu
src/simd/: simd_operations.cpp  simd_operations.h
